--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
+    <link rel="manifest" href="manifest.json">
     <link rel=icon href=favicon.ico>
     <title>Testando PWA</title>
     <link href=css/app.fd1123cc.css rel=preload as=style>
