--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div id=app></div>
     <script src=js/chunk-vendors.7a32d01e.js></script>
     <script src=js/app.4454504e.js></script>
+    <script src=app.js></script>
   </body>
 </html>
